Fix (Homepage Layout): Fix align items instead of align content written in sass module.

--- a/src/common/pages/Homepage/Header/Header.module.sass
+++ b/src/common/pages/Homepage/Header/Header.module.sass
@@ -7,7 +7,7 @@
         flex-direction: column
         justify-content: center
         flex-wrap: wrap
-        align-content: center
+        align-items: center
         gap: 60px
 
         width: 100%
